--- a/cluster_sim/package.json
+++ b/cluster_sim/package.json
@@ -1,8 +1,16 @@
 {
+  "name": "cluster_sim",
+  "version": "1.3.2",
+  "private": true,
+
   "dependencies": {
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "ws": "^8.18.0",
     "xml2js": "^0.6.2"
+  },
+
+  "scripts": {
+    "start": "node cluster_sim.js"
   }
 }
